Finalized main page. Fixed issue with search after implementing sorting

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+<body class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <p>Welcome to the My Scripture Journal page. A place to record scriptures that have led to inspiration, sentiment, or other connections. You can record the scripture reference, and add a personal note. Click on My Scripture Journal to get started.</p>
+    <img src="~/img/scriptures.jpg" alt="Scriptures on Desk" height="338" width="600" />
+</body>
